

  07 Jan 2013; Justin Lecher <jlec@gentoo.org> -lh-sources-3.6.10.ebuild,
  -lh-sources-3.6.11.ebuild, lh-sources-3.6.11-r1.ebuild,
  -lh-sources-3.7.0.ebuild, lh-sources-3.7.1.ebuild:
  Version Bump

  23 Dec 2012; Justin Lecher <jlec@gentoo.org> lh-sources-3.6.11-r1.ebuild:
  Move deps to PDEPEND

  20 Dec 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.6.11-r1.ebuild,
  lh-sources-3.7.1.ebuild, metadata.xml:
  Include aufs support directly

*lh-sources-3.6.11-r1 (19 Dec 2012)

  19 Dec 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.6.11-r1.ebuild,
  lh-sources-3.7.1.ebuild:
  Include aufs support directly

*lh-sources-3.7.1 (18 Dec 2012)

  18 Dec 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.7.1.ebuild:
  Version Bump

*lh-sources-3.6.11 (18 Dec 2012)

  18 Dec 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.6.11.ebuild,
  metadata.xml:
  Version Bump

*lh-sources-3.7.0 (12 Dec 2012)
*lh-sources-3.6.10 (12 Dec 2012)

  12 Dec 2012; Justin Lecher <jlec@gentoo.org> -lh-sources-3.6.5-r1.ebuild,
  -lh-sources-3.6.6.ebuild, -lh-sources-3.6.8.ebuild,
  +lh-sources-3.6.10.ebuild, +lh-sources-3.7.0.ebuild,
  +files/lh-sources-3.7-armv6.patch:
  Version Bump

*lh-sources-3.6.8 (30 Nov 2012)

  30 Nov 2012; Justin Lecher <jlec@gentoo.org> +lh-sources-3.6.8.ebuild:
  Version BUmp

  06 Nov 2012; Justin Lecher <jlec@gentoo.org>
  +files/lh-sources-3.6-armv6.patch, lh-sources-3.6.5-r1.ebuild,
  -files/lh-sources-3.6.5-armv6.patch, +lh-sources-3.6.6.ebuild:
  Version Bump

*lh-sources-3.6.6 (06 Nov 2012)

  06 Nov 2012; Justin Lecher <jlec@gentoo.org>
  +files/lh-sources-3.6-armv6.patch, lh-sources-3.6.5-r1.ebuild,
  -files/lh-sources-3.6.5-armv6.patch, +lh-sources-3.6.6.ebuild:
  Version Bump

*lh-sources-3.6.5-r1 (05 Nov 2012)

  05 Nov 2012; Justin Lecher <jlec@gentoo.org> -lh-sources-3.6.1.ebuild,
  -lh-sources-3.6.2.ebuild, -lh-sources-3.6.4.ebuild, -lh-sources-3.6.5.ebuild,
  +lh-sources-3.6.5-r1.ebuild, +files/lh-sources-3.6.5-armv6.patch,